<resources>
    <string name="app_name">Migo Product Catalog</string>
    <string name="action_settings">Settings</string>
    <string name="action_gridview">Grid View</string>
    <string name="action_listview">List View</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_all">All Items</string>
    <string name="nav_item_music">Music</string>
    <string name="nav_item_books">Books</string>
    <string name="nav_item_movies">Movies</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_all</item>
        <item>@string/nav_item_music</item>
        <item>@string/nav_item_books</item>
        <item>@string/nav_item_movies</item>
    </string-array>
    <string name="title_activity_login">Migo Entertainment</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_image_required">Image upload is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="transition_splash_to_login">cooleffect</string>
    <string name="proceed">PROCEED</string>
    <string name="cancel">CANCEL</string>
</resources>
