<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Activity.MainActivity">
    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_gridview"
        android:orderInCategory="100"
        android:title="@string/action_gridview"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_listview"
        android:orderInCategory="100"
        android:title="@string/action_listview"
        app:showAsAction="never" />
</menu>
